--- a/src/components/drop-down-input/drop-down-input.pug
+++ b/src/components/drop-down-input/drop-down-input.pug
@@ -1,4 +1,4 @@
-mixin dropDown({ text, classForJs })
+mixin dropDownInput({ text, classForJs })
   -
     let dropDownBodyClass = "drop-down-input__body";
     let dropDownBtnClass = "drop-down-input__button";
