--- a/src/components/date-wishes/date-wishes.pug
+++ b/src/components/date-wishes/date-wishes.pug
@@ -1,4 +1,4 @@
-include ../drop-down/drop-down
+include ../drop-down-input/drop-down-input
 include ../typography/typography
 include ../button/button
 
@@ -12,16 +12,16 @@ mixin dateWishes()
             .date-wishes__input-wrap
               .date-wishes__title-wrap
                 +typography({ text: "Прибытие", variant: "h3", hasUpper: true })
-              +dropDown({ text: "ДД.ММ.ГГГГ", classForJs: "js-arrival-input" })
+              +dropDownInput({ text: "ДД.ММ.ГГГГ", classForJs: "js-arrival-input" })
             .date-wishes__input-wrap
               .date-wishes__title-wrap
                 +typography({ text: "Выезд", variant: "h3", hasUpper: true })
-              +dropDown({ text: "ДД.ММ.ГГГГ", classForJs: "js-departure-input" })
+              +dropDownInput({ text: "ДД.ММ.ГГГГ", classForJs: "js-departure-input" })
             div(class="date-picker-container js-date-picker-container date-wishes__date-picker-container")
           .date-wishes__title-wrap
             +typography({ text: "Гости", variant: "h3", hasUpper: true })  
-          +dropDown({ text: "Сколько гостей", classForJs: "js-input-drop-down" })
-          div(class="drop-down-container js-drop-down-container")
+          +dropDownInput({ text: "Сколько гостей", classForJs: "js-input-drop-down" })
+          div(class="drop-down-counter-container js-drop-down-counter-container")
         +button({
           title: "Подобрать номер",
           withIcon: true,
