переименовал intellig в features в room-details

--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -27,7 +27,7 @@ block content
         .room-details__content
           .room-details__content-wrap
             .room-details__column
-              section.room-details__intellig
+              section.room-details__features
                 .room-details__title-wrap
                   +typography({ variant: "h2", text: "Сведения о номере" })
                 +features({
