--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -19,42 +19,58 @@
 @import '../../components/typography/typography.scss';
 
 .room-details__picture {
-  margin: 0 auto;
-  display: grid;
-  max-width: 1440px;
-  grid-template-columns: 981fr 461fr;
-  justify-items: end;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
-  /* stylelint-disable */
-  img {
-    /* stylelint-enable */
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    max-width: 981px;
-    height: 100%;
+  &-big {
+    width: 68.06%;
+    max-width: 1300px;
+    font-size: 0;
+
+    @media (max-width: 1024px) {
+      width: 100%;
+    }
+    /* stylelint-disable */
+    img {
+      /* stylelint-enable */
+      width: 100%;
+      height: 485px;
+
+      @media (max-width: 425px) {
+        height: 285px;
+      }
+    }
+  }
+
+  &-miniature {
+    display: flex;
+    width: 31.94%;
+    max-width: 608px;
+    flex-wrap: wrap;
+
+    @media (max-width: 1024px) {
+      width: 100%;
+    }
+    /* stylelint-disable */
+    img {
+      /* stylelint-enable */
+      width: 100%;
+      height: 242.5px;
+
+      @media (max-width: 1024px) {
+        width: 50%;
+      }
+
+      @media (max-width: 425px) {
+        height: 142.5px;
+      }
+    }
   }
 }
 
 .room-details__border {
   border-bottom: 1px solid rgba(31, 32, 65, .25);
-}
-
-.room-details__picture-miniature {
-  display: flex;
-  align-content: flex-start;
-  flex-wrap: wrap;
-  font-size: 0;
-  /* stylelint-disable */
-  img {
-    max-width: 461px;
-    height: 50%;
-
-    &:last-child {
-      max-height: 240px;
-    }
-  }
-  /* stylelint-enable */
 }
 
 .room-details__title {
