#12 вложил классы элементов страниц

--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -16,26 +16,28 @@
 
 .cards-page {
   background: #f4f4f6;
+
+  &__wrap {
+    padding: 70px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  &__item {
+    margin-bottom: 40px;
+  }
+
+  &__item-hotel-wrap {
+    margin-bottom: 40px;
+  }
 }
 
-.cards-page__wrap {
-  padding: 70px 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.cards-page__item {
-  margin-bottom: 40px;
-}
-
-.cards-page__item-hotel-wrap {
-  margin-bottom: 40px;
-}
-
-.card-page__stub-card {
-  width: 320px;
-  background: $mainColor;
-  border-radius: 4px;
-  box-shadow: 0 0 25px rgba(0, 0, 0, .2);
+.card-page {
+  &__stub-card {
+    width: 320px;
+    background: $mainColor;
+    border-radius: 4px;
+    box-shadow: 0 0 25px rgba(0, 0, 0, .2);
+  }
 }
