--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -18,187 +18,186 @@
 @import '../../components/copyright/copyright.scss';
 @import '../../components/typography/typography.scss';
 
-.room-details__picture {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.room-details {
+  &__wrap {
+    padding: 70px 0 57px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 
-  &-big {
-    width: 68.06%;
-    max-width: 1300px;
-    font-size: 0;
-
-    @media (max-width: 1024px) {
-      width: 100%;
-    }
-    /* stylelint-disable */
-    img {
-      /* stylelint-enable */
-      width: 100%;
-      height: 485px;
-
-      @media (max-width: 425px) {
-        height: 285px;
-      }
+    @media (max-width: 1160px) {
+      padding-top: 40px;
+      flex-direction: column-reverse;
+      align-items: center;
     }
   }
 
-  &-miniature {
+  &__picture {
     display: flex;
-    width: 31.94%;
-    max-width: 608px;
     flex-wrap: wrap;
+    justify-content: center;
 
-    @media (max-width: 1024px) {
-      width: 100%;
-    }
-    /* stylelint-disable */
-    img {
-      /* stylelint-enable */
-      width: 100%;
-      height: 242.5px;
+    &-big {
+      width: 68.06%;
+      max-width: 1300px;
+      font-size: 0;
 
       @media (max-width: 1024px) {
-        width: 50%;
+        width: 100%;
       }
+      /* stylelint-disable */
+      img {
+        /* stylelint-enable */
+        width: 100%;
+        height: 485px;
 
-      @media (max-width: 425px) {
-        height: 142.5px;
+        @media (max-width: 425px) {
+          height: 285px;
+        }
+      }
+    }
+
+    &-miniature {
+      display: flex;
+      width: 31.94%;
+      max-width: 608px;
+      flex-wrap: wrap;
+
+      @media (max-width: 1024px) {
+        width: 100%;
+      }
+      /* stylelint-disable */
+      img {
+        /* stylelint-enable */
+        width: 100%;
+        height: 242.5px;
+
+        @media (max-width: 1024px) {
+          width: 50%;
+        }
+
+        @media (max-width: 425px) {
+          height: 142.5px;
+        }
       }
     }
   }
-}
 
-.room-details__border {
-  border-bottom: 1px solid rgba(31, 32, 65, .25);
-}
-
-.room-details__title {
-  margin: 0;
-  margin-bottom: 23px;
-  display: flex;
-  justify-content: space-between;
-  font-size: 18px;
-  font-weight: bold;
-
-  &_low-mb {
-    margin-bottom: 10px;
-  }
-}
-
-.room-details__title-wrap {
-  margin-bottom: 18px;
-  display: flex;
-  justify-content: space-between;
-
-  &_left-gap {
-    padding-left: 20px;
-  }
-}
-
-.room-details__title-alt {
-  padding-top: 2px;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  color: transparentize($contentColor, .5);
-}
-
-.room-details__wrap {
-  padding: 70px 0 57px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-
-  @media (max-width: 1160px) {
-    padding-top: 40px;
-    flex-direction: column-reverse;
-    align-items: center;
-  }
-}
-
-.room-details__total-card-wrap {
-  @media (max-width: 1160px) {
-    margin-bottom: 40px;
-  }
-}
-
-.room-details__content {
-  margin-right: 70px;
-  width: 61.3%;
-
-  @media (max-width: 1160px) {
-    margin-right: 0;
-    width: 100%;
-  }
-}
-
-.room-details__content-wrap {
-  @media (max-width: 425px) {
-    padding-right: 20px;
-    padding-left: 20px;
-  }
-}
-
-.room-details__column {
-  margin-bottom: 35px;
-  display: flex;
-  justify-content: space-between;
-
-  &:last-child {
-    margin-bottom: 0;
+  &__border {
+    border-bottom: 1px solid rgba(31, 32, 65, .25);
   }
 
-  @media (max-width: 800px) {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-.room-details__features {
-  @media (max-width: 800px) {
-    margin-bottom: 40px;
-  }
-}
-
-.room-details__reviews {
-  margin-bottom: 39px;
-}
-
-.room-details__review-wrap {
-  margin-bottom: 12px;
-}
-
-.room-details__info {
-  margin-right: 9px;
-  width: 48%;
-
-  @media (max-width: 800px) {
-    width: 100%;
-  }
-}
-
-.room-details__info .room-details__title {
-  margin-bottom: 20px;
-}
-
-/* stylelint-disable */
-.room-details__info {
-  p {
-    /* stylelint-enable */
+  &__title {
     margin: 0;
-    width: 100%;
+    margin-bottom: 23px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: bold;
+
+    &_low-mb {
+      margin-bottom: 10px;
+    }
+  }
+
+  &__title-wrap {
+    margin-bottom: 18px;
+    display: flex;
+    justify-content: space-between;
+
+    &_left-gap {
+      padding-left: 20px;
+    }
+  }
+
+  &__title-alt {
+    padding-top: 2px;
     font-family: Montserrat, Quicksand, Arial, sans-serif;
     font-size: 14px;
-    line-height: 24px;
-    color: transparentize($contentColor, .25);
+    font-weight: normal;
+    color: transparentize($contentColor, .5);
   }
-}
 
-.room-details__date-picker-container {
-  top: 270px;
+  &__total-card-wrap {
+    @media (max-width: 1160px) {
+      margin-bottom: 40px;
+    }
+  }
 
-  @media (max-width: 380px) {
-    top: 350px;
+  &__content {
+    margin-right: 70px;
+    width: 61.3%;
+
+    @media (max-width: 1160px) {
+      margin-right: 0;
+      width: 100%;
+    }
+  }
+
+  &__content-wrap {
+    @media (max-width: 425px) {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+  }
+
+  &__column {
+    margin-bottom: 35px;
+    display: flex;
+    justify-content: space-between;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    @media (max-width: 800px) {
+      width: 100%;
+      flex-direction: column;
+    }
+  }
+
+  &__features {
+    @media (max-width: 800px) {
+      margin-bottom: 40px;
+    }
+  }
+
+  &__reviews {
+    margin-bottom: 39px;
+  }
+
+  &__review-wrap {
+    margin-bottom: 12px;
+  }
+
+  &__info {
+    margin-right: 9px;
+    width: 48%;
+
+    @media (max-width: 800px) {
+      width: 100%;
+    }
+
+    .room-details__title {
+      margin-bottom: 20px;
+    }
+    /* stylelint-disable */
+    p {
+      /* stylelint-enable */
+      margin: 0;
+      width: 100%;
+      font-family: Montserrat, Quicksand, Arial, sans-serif;
+      font-size: 14px;
+      line-height: 24px;
+      color: transparentize($contentColor, .25);
+    }
+  }
+
+  &__date-picker-container {
+    top: 270px;
+
+    @media (max-width: 380px) {
+      top: 350px;
+    }
   }
 }
