--- a/src/pages/rooms/rooms.scss
+++ b/src/pages/rooms/rooms.scss
@@ -20,28 +20,34 @@
 @import '../../components/copyright/copyright.scss';
 @import '../../../node_modules/nouislider/distribute/nouislider.min.css';
 
-.rooms-page__border {
-  border-bottom: 1px solid rgba(31, 32, 65, .25);
-}
-
-.rooms-page__wrap {
-  padding: 30px 0 71px;
-  display: flex;
-
-  @media (max-width: 768px) {
-    flex-direction: column;
-    align-items: center;
+.rooms-page {
+  &__border {
+    border-bottom: 1px solid rgba(31, 32, 65, .25);
   }
 
-  @media (max-width: 425px) {
-    padding-right: 20px;
-    padding-left: 20px;
-  }
-}
+  &__wrap {
+    padding: 30px 0 71px;
+    display: flex;
 
-.rooms-page__date-picker-container {
-  position: relative;
-  top: 205px;
+    @media (max-width: 768px) {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    @media (max-width: 425px) {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+  }
+
+  &__date-picker-container {
+    position: relative;
+    top: 205px;
+  }
+
+  &__pagination {
+    text-align: center;
+  }
 }
 
 .filter {
@@ -51,63 +57,61 @@
     margin-right: 0;
     width: 266px;
   }
+
+  &__wrap {
+    width: 266px;
+
+    @media (max-width: 768px) {
+      width: 100%;
+    }
+  }
+
+  &__item {
+    margin-bottom: 30px;
+
+    &_mbs {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__explain {
+    margin: 0;
+    margin-top: 14px;
+    font-size: 12px;
+    line-height: 14px;
+    color: transparentize($contentColor, .5);
+  }
+
+  &__title-wrap {
+    margin-bottom: 5px;
+
+    &_bottom-gap {
+      margin-bottom: 16px;
+    }
+  }
 }
 
-.filter__wrap {
-  width: 266px;
+.hotels {
+  &__title-wrap {
+    margin-bottom: 21px;
+  }
 
-  @media (max-width: 768px) {
+  &__list {
+    margin: 0;
+    margin-bottom: 25px;
+    padding: 0;
+    display: flex;
     width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    list-style: none;
+
+    @media (max-width: 595px) {
+      justify-content: center;
+    }
   }
-}
 
-.filter__item {
-  margin-bottom: 30px;
-
-  &_mbs {
-    margin-bottom: 20px;
+  &__item {
+    margin-bottom: 21px;
   }
-}
-
-.filter__explain {
-  margin: 0;
-  margin-top: 14px;
-  font-size: 12px;
-  line-height: 14px;
-  color: transparentize($contentColor, .5);
-}
-
-.filter__title-wrap {
-  margin-bottom: 5px;
-
-  &_bottom-gap {
-    margin-bottom: 16px;
-  }
-}
-
-.hotels__title-wrap {
-  margin-bottom: 21px;
-}
-
-.hotels__list {
-  margin: 0;
-  margin-bottom: 25px;
-  padding: 0;
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  list-style: none;
-
-  @media (max-width: 595px) {
-    justify-content: center;
-  }
-}
-
-.hotels__item {
-  margin-bottom: 21px;
-}
-
-.rooms-page__pagination {
-  text-align: center;
 }
