--- a/src/pages/auth/auth.scss
+++ b/src/pages/auth/auth.scss
@@ -10,17 +10,19 @@
 @import '../../components/copyright/copyright.scss';
 @import '../../components/typography/typography.scss';
 
-.auth-page__main {
-  background: url('room-interior.jpg') no-repeat;
-  background-position: center -70px;
+.auth-page {
+  &__main {
+    background: url('room-interior.jpg') no-repeat;
+    background-position: center -70px;
 
-  @media (min-width: 1440px) {
-    background-size: cover;
+    @media (min-width: 1440px) {
+      background-size: cover;
+    }
   }
-}
 
-.auth-page__wrap {
-  padding: 173px 0 174px;
-  display: flex;
-  justify-content: center;
+  &__wrap {
+    padding: 173px 0 174px;
+    display: flex;
+    justify-content: center;
+  }
 }
