--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -17,148 +17,150 @@
 @import '../../components/features/features.scss';
 @import '../../components/comment/comment.scss';
 
-.form-elements__wrap {
-  padding-top: 65px;
-  padding-bottom: 100px;
-}
-
-.form-elements__row {
-  margin-bottom: 100px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.form-elements__title-wrap {
-  margin-bottom: 5px;
-  display: flex;
-  justify-content: space-between;
-
-  &_bottom-gap {
-    margin-bottom: 16px;
-  }
-}
-
-.form-elements__title-alt {
-  margin: 0;
-  padding: 0;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-size: 12px;
-  font-weight: normal;
-  text-transform: uppercase;
-  color: transparentize($contentColor, .5);
-}
-
-.form-elements__inputs {
-  width: 27.6%;
-}
-
-.form-elements__input {
-  margin-bottom: 20px;
-
-  &:last-child {
-    margin-bottom: 0;
+.form-elements {
+  &__wrap {
+    padding-top: 65px;
+    padding-bottom: 100px;
   }
 
-  &_size_medium {
-    width: 83%;
+  &__row {
+    margin-bottom: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
-  &_bottom-gap {
-    margin-bottom: 174px;
+  &__title-wrap {
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: space-between;
+
+    &_bottom-gap {
+      margin-bottom: 16px;
+    }
   }
 
-  &_bottom-large-gap {
-    margin-bottom: 220px;
+  &__title-alt {
+    margin: 0;
+    padding: 0;
+    font-family: Montserrat, Quicksand, Arial, sans-serif;
+    font-size: 12px;
+    font-weight: normal;
+    text-transform: uppercase;
+    color: transparentize($contentColor, .5);
   }
-}
 
-.form-elements__date-inputs {
-  margin: 41px 0;
-  display: flex;
-  justify-content: space-between;
-}
+  &__inputs {
+    width: 27.6%;
+  }
 
-.form-elements__date-input {
-  width: 100%;
+  &__input {
+    margin-bottom: 20px;
 
-  &:first-child {
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    &_size_medium {
+      width: 83%;
+    }
+
+    &_bottom-gap {
+      margin-bottom: 174px;
+    }
+
+    &_bottom-large-gap {
+      margin-bottom: 220px;
+    }
+  }
+
+  &__date-inputs {
+    margin: 41px 0;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__date-input {
+    width: 100%;
+
+    &:first-child {
+      margin-right: 20px;
+    }
+
+    &_with-margin {
+      margin-bottom: 41px;
+    }
+
+    &_size_medium {
+      width: 83%;
+    }
+  }
+
+  &__controls {
+    width: 22.9%;
+  }
+
+  &__control {
+    margin-bottom: 40px;
+  }
+
+  &__toggle {
+    margin-bottom: 10px;
+  }
+
+  &__like-wrap {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__like-btn {
+    margin-right: 10px;
+  }
+
+  &__rate-btn-wrap {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__rate-btn {
     margin-right: 20px;
   }
 
-  &_with-margin {
+  &__buttons {
+    width: 27.7%;
+  }
+
+  &__range-slider-wrap {
+    margin-bottom: 42px;
+    width: 82.8%;
+  }
+
+  &__buttons-wrap {
+    margin-bottom: 30px;
+    display: flex;
+  }
+
+  &__button-wrap {
+    margin-right: 20px;
+  }
+
+  &__submit-btn {
     margin-bottom: 41px;
   }
 
-  &_size_medium {
-    width: 83%;
+  &__row-wrap {
+    width: 23%;
+
+    &_size_large {
+      width: 61.3%;
+    }
   }
-}
 
-.form-elements__controls {
-  width: 22.9%;
-}
-
-.form-elements__control {
-  margin-bottom: 40px;
-}
-
-.form-elements__toggle {
-  margin-bottom: 10px;
-}
-
-.form-elements__like-wrap {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.form-elements__like-btn {
-  margin-right: 10px;
-}
-
-.form-elements__rate-btn-wrap {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.form-elements__rate-btn {
-  margin-right: 20px;
-}
-
-.form-elements__buttons {
-  width: 27.7%;
-}
-
-.form-elements__range-slider-wrap {
-  margin-bottom: 42px;
-  width: 82.8%;
-}
-
-.form-elements__buttons-wrap {
-  margin-bottom: 30px;
-  display: flex;
-}
-
-.form-elements__button-wrap {
-  margin-right: 20px;
-}
-
-.form-elements__submit-btn {
-  margin-bottom: 41px;
-}
-
-.form-elements__row-wrap {
-  width: 23%;
-
-  &_size_large {
-    width: 61.3%;
+  &__checkbox-list {
+    margin-bottom: 32px;
   }
-}
-
-.form-elements__checkbox-list {
-  margin-bottom: 32px;
 }
