--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -12,17 +12,19 @@
 @import '../../components/copyright/copyright.scss';
 @import '../../components/typography/typography.scss';
 
-.registration-page__main {
-  background: url('room-interior.jpg') no-repeat;
-  background-position: center -70px;
+.registration-page {
+  &__main {
+    background: url('room-interior.jpg') no-repeat;
+    background-position: center -70px;
 
-  @media (min-width: 1440px) {
-    background-size: cover;
+    @media (min-width: 1440px) {
+      background-size: cover;
+    }
   }
-}
 
-.registration-page__wrap {
-  padding: 20px 0;
-  display: flex;
-  justify-content: center;
+  &__wrap {
+    padding: 20px 0;
+    display: flex;
+    justify-content: center;
+  }
 }
