--- a/src/pages/rooms/rooms.pug
+++ b/src/pages/rooms/rooms.pug
@@ -1,11 +1,6 @@
 extends ../../layout/main.pug
-include ../../components/drop-down-input/drop-down-input
-include ../../components/range-slider/range-slider
-include ../../components/checkbox-list/checkbox-list
-include ../../components/expandable-checkbox/expandable-checkbox
-include ../../components/hotel-card/hotel-card
-include ../../components/pagination/pagination
-include ../../components/typography/typography
+include ../../components/filter/filter
+include ../../components/hotels/hotels
 
 block variables
   -
@@ -14,236 +9,10 @@ block variables
     const keywords = "Toxin keywords";
     const pageClass = "rooms-page";
     const footerBorderTop = true;
-
-  -
-    const hotels = [
-        {
-          numberHotel: 888,
-          isLuxed: true,
-          reviewCount: 145,
-          dayCost: "9 900",
-          starCount: 5,
-          images: [
-            { src: "./img/hotels/hotel-1.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-1.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-1.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-1.jpg", alt: "Красивый отель" }
-          ]
-        },
-        {
-          numberHotel: 840,
-          isBtnSliderHide: true,
-          reviewCount: 65,
-          dayCost: "9 900",
-          starCount: 4,
-          images: [
-            { src: "./img/hotels/hotel-2.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-2.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-2.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-2.jpg", alt: "Красивый отель" }
-          ]
-        },
-        {
-          numberHotel: 980,
-          isBtnSliderHide: true,
-          isLuxed: true,
-          reviewCount: 35,
-          dayCost: "8 500",
-          starCount: 3,
-          images: [
-            { src: "./img/hotels/hotel-3.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-3.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-3.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-3.jpg", alt: "Красивый отель" }
-          ]
-        },
-        {
-          numberHotel: 856,
-          isBtnSliderHide: true,
-          reviewCount: 19,
-          dayCost: "7 300",
-          starCount: 5,
-          images: [
-            { src: "./img/hotels/hotel-4.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-4.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-4.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-4.jpg", alt: "Красивый отель" }
-          ]
-        },
-        {
-          numberHotel: 740,
-          isBtnSliderHide: true,
-          reviewCount: 44,
-          dayCost: "6 000",
-          starCount: 4,
-          images: [
-            { src: "./img/hotels/hotel-5.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-5.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-5.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-5.jpg", alt: "Красивый отель" }
-          ]
-        },
-        {
-          numberHotel: 982,
-          isBtnSliderHide: true,
-          reviewCount: 56,
-          dayCost: "5 800",
-          starCount: 3,
-          images: [
-            { src: "./img/hotels/hotel-6.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-6.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-6.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-6.jpg", alt: "Красивый отель" }
-          ]
-        },
-        {
-          numberHotel: 678,
-          isBtnSliderHide: true,
-          dayCost: "5 500",
-          starCount: 5,
-          reviewCount: 45,
-          images: [
-            { src: "./img/hotels/hotel-7.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-7.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-7.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-7.jpg", alt: "Красивый отель" }
-          ]
-        },
-        {
-          numberHotel: 450,
-          isBtnSliderHide: true,
-          dayCost: "5 300",
-          starCount: 4,
-          reviewCount: 39,
-          images: [
-            { src: "./img/hotels/hotel-8.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-8.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-8.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-8.jpg", alt: "Красивый отель" }
-          ]
-        },
-        {
-          numberHotel: 350,
-          isBtnSliderHide: true,
-          dayCost: "5 000",
-          starCount: 3,
-          reviewCount: 77,
-          images: [
-            { src: "./img/hotels/hotel-9.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-9.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-9.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-9.jpg", alt: "Красивый отель" }
-          ]
-        },
-        {
-          numberHotel: 666,
-          isBtnSliderHide: true,
-          dayCost: "5 000",
-          starCount: 5,
-          reviewCount: 25,
-          images: [
-            { src: "./img/hotels/hotel-10.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-10.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-10.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-10.jpg", alt: "Красивый отель" }
-          ]
-        },
-        {
-          numberHotel: 444,
-          isBtnSliderHide: true,
-          dayCost: "5 000",
-          starCount: 3,
-          reviewCount: 15,
-          images: [
-            { src: "./img/hotels/hotel-11.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-11.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-11.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-11.jpg", alt: "Красивый отель" }
-          ]
-        },
-        {
-          numberHotel: 352,
-          isBtnSliderHide: true,
-          dayCost: "5 000",
-          starCount: 3,
-          reviewCount: 55,
-          images: [
-            { src: "./img/hotels/hotel-12.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-12.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-12.jpg", alt: "Красивый отель" },
-            { src: "./img/hotels/hotel-12.jpg", alt: "Красивый отель" }
-          ]
-        }
-      ];
-  
+ 
 block content
   .rooms-page__border
     .container
       .rooms-page__wrap
-        .filter
-          .filter__wrap
-            div(class="filter__item  filter__item_mbs")
-              .filter__title-wrap
-                +typography({ text: "Даты пребывания в отеле", variant: "h3", hasUpper: true })
-              +dropDownInput({ text: "19 авг - 23 авг", classForJs: "js-drop-down-input" })
-              div(class="date-picker-container js-date-picker-container rooms-page__date-picker-container")
-            .filter__item
-              .filter__title-wrap
-                +typography({ text: "Гости", variant: "h3", hasUpper: true })
-              +dropDownInput({ text: "3 гостя, 1 младенец", classForJs: "js-input-drop-down-guest" })
-              div(class="drop-down-counter-container js-drop-down-counter-container-guest")
-            .filter__item
-              +rangeSlider({ title: "Диапазон цены" })
-              p.filter__explain Стоимость за сутки пребывания в номере
-            .filter__item
-              div(class="filter__title-wrap filter__title-wrap_bottom-gap")
-                +typography({ text: "Правила дома", variant: "h3", hasUpper: true })
-              +checkboxList({
-                items: [
-                  { label: "Можно курить" },
-                  { label: "Можно с питомцами", isChecked: true },
-                  { label: "Можно пригласить гостей (до 10 человек)", isChecked: true },
-                ],
-              })
-            .filter__item
-              div(class="filter__title-wrap filter__title-wrap_bottom-gap")
-                +typography({ text: "Доступность", variant: "h3", hasUpper: true })
-              +checkboxList({
-                items: [
-                  {
-                    title: "Широкий коридор",
-                    label: "Ширина коридоров в номере не менее 91 см.",
-                  },
-                  {
-                    title: "Помощник для инвалидов",
-                    label: "На 1 этаже вас встретит специалист  и проводит до номера.",
-                  },
-                ],
-              })
-            .filter__item
-              .filter__title-wrap
-                +typography({ text: "Удобства номера", variant: "h3", hasUpper: true })
-              +dropDownInput({ text: "2 спальни, 2 кровати...", classForJs: "js-input-drop-down" })
-              div(class="drop-down-counter-container js-drop-down-counter-container")
-            .filter__item
-              +expandableCheckbox({
-                summary: "Дополнительные удобства",
-                items: [
-                  { label: "Завтрак" },
-                  { label: "Письменный стол", isChecked: true },
-                  { label: "Стул для кормления", isChecked: true },
-                  { label: "Кроватка", isChecked: true },
-                  { label: "Телевизор" },
-                  { label: "Шампунь" },
-                ],
-              })
-        section.hotels
-          .hotels__wrap
-            .hotels__title-wrap
-              +typography({ variant: "h1", text: "Номера, которые мы для вас подобрали" })
-            ul.hotels__list
-              each item in hotels
-                li.hotels__item
-                  +hotelCard(item)
-            .rooms-page__pagination      
-              +pagination()
+        +filter()
+        +hotels()
