--- a/src/pages/rooms/rooms.scss
+++ b/src/pages/rooms/rooms.scss
@@ -1,5 +1,7 @@
 @import '../../style/utils/variables.scss';
 @import '../../components/header/header.scss';
+@import '../../components/filter/filter.scss';
+@import '../../components/hotels/hotels.scss';
 @import '../../components/button/button.scss';
 @import '../../components/main-menu/main-menu.scss';
 @import '../../components/date-wishes/date-wishes.scss';
@@ -47,71 +49,5 @@
 
   &__pagination {
     text-align: center;
-  }
-}
-
-.filter {
-  margin-right: 60px;
-
-  @media (max-width: 768px) {
-    margin-right: 0;
-    width: 266px;
-  }
-
-  &__wrap {
-    width: 266px;
-
-    @media (max-width: 768px) {
-      width: 100%;
-    }
-  }
-
-  &__item {
-    margin-bottom: 30px;
-
-    &_mbs {
-      margin-bottom: 20px;
-    }
-  }
-
-  &__explain {
-    margin: 0;
-    margin-top: 14px;
-    font-size: 12px;
-    line-height: 14px;
-    color: transparentize($contentColor, .5);
-  }
-
-  &__title-wrap {
-    margin-bottom: 5px;
-
-    &_bottom-gap {
-      margin-bottom: 16px;
-    }
-  }
-}
-
-.hotels {
-  &__title-wrap {
-    margin-bottom: 21px;
-  }
-
-  &__list {
-    margin: 0;
-    margin-bottom: 25px;
-    padding: 0;
-    display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    list-style: none;
-
-    @media (max-width: 595px) {
-      justify-content: center;
-    }
-  }
-
-  &__item {
-    margin-bottom: 21px;
   }
 }
